--- a/src/Client/Pages/_Host.cshtml
+++ b/src/Client/Pages/_Host.cshtml
@@ -6,3 +6,11 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered" />
+<script>
+    window.resetCheckboxes = function () {
+        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        checkboxes.forEach(function (checkbox) {
+            checkbox.checked = false;
+        });
+    };
+</script>
