--- a/src/Client/Pages/Books.razor
+++ b/src/Client/Pages/Books.razor
@@ -21,7 +21,7 @@
                     {
                         @foreach (var book in _filteredBooks)
                         {
-                            <div class="col-6 col-sm-12 col-md-6 col-lg-4 col-xl-4 mh-25 mb-4">
+                            <a href="/bookdetails/@book.Title" class="col-6 col-sm-12 col-md-6 col-lg-4 col-xl-4 mh-25 mb-4 card-anchor">
                                 <div class="card shadow-sm rounded">
                                     <div class="card-body">
                                         <h5 class="card-title"><b>@book.Title</b></h5>
@@ -51,7 +51,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         }
                     }
                     else
