--- a/src/Client/Pages/Books.razor
+++ b/src/Client/Pages/Books.razor
@@ -26,6 +26,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title"><b>@book.Title</b></h5>
                                         <p class="card-subtitle mb-2 text-muted text-md-center">@book.AuthorName</p>
+                                          <img src="@book.Image" alt="Book Cover" class="img-fluid">
                                     </div>
                                     <div class="mb-2 text-center">
                                         <a href="/reviews" class="text-decoration-none align-bottom">
