--- a/src/IdentityServer/Views/_ViewImports.cshtml
+++ b/src/IdentityServer/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@using IdentityServerHost.Quickstart.UI
+@using IdentityServer
+@using IdentityServer.Quickstart.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
