--- a/src/Client/Pages/BookDetails.razor
+++ b/src/Client/Pages/BookDetails.razor
@@ -4,7 +4,16 @@
 
 @if (Book != null)
 {
-    <h1>@Book.Title</h1>
+    <div class="d-flex flex-row">
+        <h1>@Book.Title</h1>
+        <button type="button" class="btn btn-lg btn-outline-primary ms-2" @onclick="() => AddToCart(Book)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3 me-1" viewBox="0 0 16 16">
+                <path d="M1 0.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .485.379l.825 3.3 1.871 7.484a.5.5 0 0 0 .485.384h6.086a.5.5 0 0 0 .485-.384l1.87-7.484.826-3.3a.5.5 0 0 1 .485-.38h1a.5.5 0 0 1 .478.658l-2 8A.5.5 0 0 1 14.5 12H4.95a.5.5 0 0 1-.477-.342l-2-8a.5.5 0 0 1 .477-.658h1.01a.5.5 0 0 1 .485.38l.247 1.004h7.527l-.51-2.04H3.165L2.655 1.5h10.032l.247 1.004h1.01a.5.5 0 0 1 .478.658l-2 8A.5.5 0 0 1 12.5 12H3.001a.5.5 0 0 1-.477-.342l-2-8A.5.5 0 0 1 1 3.5h.182L1 0.5zM14.5 13a1.5 1.5 0 0 0 0 3 1.5 1.5 0 0 0 0-3z" />
+            </svg>
+            Buy
+        </button>
+    </div>
+    
     <article>
         <div class="book-cover">
             
@@ -45,8 +54,4 @@
 else
 {
     <p>Book not found</p>
-}
-
-@code {
-   
 }
