--- a/src/Client/Pages/Index.razor
+++ b/src/Client/Pages/Index.razor
@@ -24,3 +24,10 @@
         </div>
     </div>
 </div>
+
+@code {
+    protected override void OnInitialized()
+    {
+        StateHasChanged();
+    }
+}
