--- a/src/Client/Pages/Cart.razor
+++ b/src/Client/Pages/Cart.razor
@@ -3,44 +3,45 @@
 @using Client.Services.Interfaces
 
 <h1>Shopping Cart</h1>
-
-@if (Basket.Items.Any())
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Price</th>
-                <th>Total</th>
-                <th>Change Quantity</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Basket.Items)
-            {
+<div class="table-responsive">
+    @if (Basket.Items.Any())
+    {
+        <table class="table">
+            <thead>
                 <tr>
-                    <td>@item.ProductName</td>
-                    <td>@item.Quantity</td>
-                    <td>@item.Price</td>
-                    <td>@(item.Price * item.Quantity)</td>
-                     <td>
-                        <input type="number" min="1" value="@item.Quantity" @onchange="async e => await UpdateQuantity(item.ProductId, int.Parse(e.Value.ToString()))" class="form-control" style="width: 70px;" />
-                    </td>
-                    <td><button class="btn btn-danger" @onclick="() => RemoveFromCart(item.ProductId)">Remove</button></td>
+                    <th>Product</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                    <th>Total</th>
+                    <th>Change Quantity</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
-    <div>Total Price: @Basket.TotalPrice</div>
-    <a href="/checkout" class="btn btn-primary">Checkout</a>
-}
-else
-{
-    <p>Your shopping cart is empty.</p>
-}
-
+            </thead>
+            <tbody>
+                @foreach (var item in Basket.Items)
+                {
+                    <tr>
+                        <td>@item.ProductName</td>
+                        <td>@item.Quantity</td>
+                        <td>@item.Price</td>
+                        <td>@(item.Price * item.Quantity)</td>
+                         <td>
+                            <input type="number" min="1" value="@item.Quantity" @onchange="async e => await UpdateQuantity(item.ProductId, int.Parse(e.Value.ToString()))" class="form-control" style="width: 70px;" />
+                        </td>
+                        <td><button class="btn btn-danger" @onclick="() => RemoveFromCart(item.ProductId)">Remove</button></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <div><b>Total Price:</b> @Basket.TotalPrice</div>
+        <hr/>
+        <a href="/checkout" class="btn btn-primary">Checkout</a>
+    }
+    else
+    {
+        <p>Your shopping cart is empty.</p>
+    }
+</div>
 @code {
     public ShoppingCart Basket { get; set; } = new ShoppingCart();
     [Inject] public IShoppingCartService Service { get; set; }
