--- a/src/Client/Shared/MainLayout.razor
+++ b/src/Client/Shared/MainLayout.razor
@@ -14,21 +14,23 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            @if (UserIsAuthenticated)
-            {
-                <span>Welcome, @UserName!</span>
-            }
-            <a href="cart" class="ms-3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                    <path d="M1 0.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .485.379l.825 3.3 1.871 7.484a.5.5 0 0 0 .485.384h6.086a.5.5 0 0 0 .485-.384l1.87-7.484.826-3.3a.5.5 0 0 1 .485-.38h1a.5.5 0 0 1 .478.658l-2 8A.5.5 0 0 1 14.5 12H4.95a.5.5 0 0 1-.477-.342l-2-8a.5.5 0 0 1 .477-.658h1.01a.5.5 0 0 1 .485.38l.247 1.004h7.527l-.51-2.04H3.165L2.655 1.5h10.032l.247 1.004h1.01a.5.5 0 0 1 .478.658l-2 8A.5.5 0 0 1 12.5 12H3.001a.5.5 0 0 1-.477-.342l-2-8A.5.5 0 0 1 1 3.5h.182L1 0.5zM14.5 13a1.5 1.5 0 0 0 0 3 1.5 1.5 0 0 0 0-3z" />
-                </svg>
-                Cart @if (ItemCount > 0)
+        <div class="top-row px-4 auth">
+            <div class="welcome-message">
+                @if (UserIsAuthenticated)
                 {
-                    <span class="badge bg-secondary">@ItemCount</span>
+                    <span>Welcome,</span> <a href="/profile" class="profile-link">@UserName!</a>
                 }
-            </a>
+            </div>
             <div>
+                <a href="cart" class="ms-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
+                        <path d="M1 0.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .485.379l.825 3.3 1.871 7.484a.5.5 0 0 0 .485.384h6.086a.5.5 0 0 0 .485-.384l1.87-7.484.826-3.3a.5.5 0 0 1 .485-.38h1a.5.5 0 0 1 .478.658l-2 8A.5.5 0 0 1 14.5 12H4.95a.5.5 0 0 1-.477-.342l-2-8a.5.5 0 0 1 .477-.658h1.01a.5.5 0 0 1 .485.38l.247 1.004h7.527l-.51-2.04H3.165L2.655 1.5h10.032l.247 1.004h1.01a.5.5 0 0 1 .478.658l-2 8A.5.5 0 0 1 12.5 12H3.001a.5.5 0 0 1-.477-.342l-2-8A.5.5 0 0 1 1 3.5h.182L1 0.5zM14.5 13a1.5 1.5 0 0 0 0 3 1.5 1.5 0 0 0 0-3z" />
+                    </svg>
+                    Cart @if (ItemCount > 0)
+                    {
+                        <span class="badge bg-secondary">@ItemCount</span>
+                    }
+                </a>
                 <AuthorizeView>
                     <Authorized>
                         <a href="logout" class="btn btn-link">Logout</a>
@@ -65,7 +67,7 @@
 
     private async Task UpdateItemCount()
     {
-        ItemCount = await ShoppingCartService.GetItemCountAsync(); 
+        ItemCount = await ShoppingCartService.GetItemCountAsync();
         StateHasChanged();
     }
 
