--- a/src/Client/Shared/MainLayout.razor.css
+++ b/src/Client/Shared/MainLayout.razor.css
@@ -15,50 +15,55 @@ main {
 .top-row {
     background-color: #343a40;
     border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
+    justify-content: space-between;
     height: 3.5rem;
     display: flex;
     align-items: center;
-    color: white
+    color: white;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-    .top-row ::deep a, .top-row .btn-link {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-        
-    }
+.top-row a, .top-row .btn-link {
+    color: white;
+    text-decoration: none;
+    transition: transform 0.3s;
+    margin-left: 1.5rem;
+}
 
-    .top-row a {
-        color: white;
-        text-decoration: none;
-        transition: transform 0.3s;
-    }
+.top-row a:hover {
+    font-weight: 700;
+    transform: scale(1.1);
+}
 
-    .top-row a:hover {
-            font-weight: 700;
-            transform: scale(1.1);
-     }
+.profile-link {
+    margin-left: 0 !important;
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 5px;
+}
 
-.top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
+.profile-link:hover {
+    text-decoration: underline;
+    color: #0056b3;
 }
 
 @media (max-width: 640.98px) {
-    .top-row:not(.auth) {
+    .top-row .welcome-message {
         display: none;
-    }
-
-    .top-row.auth {
-        justify-content: space-between;
     }
 
     .top-row a, .top-row .btn-link {
         margin-left: 0;
     }
+
+    .top-row.auth {
+        justify-content: space-between;
+    }
 }
 
-@media (min-width: 641px) {
+@media (min-width: 699px) {
     .page {
         flex-direction: row;
     }
