--- a/src/IdentityServer/Views/Account/Register.cshtml
+++ b/src/IdentityServer/Views/Account/Register.cshtml
@@ -11,6 +11,10 @@
         <label asp-for="UserName"></label>
         <input asp-for="UserName" class="form-control" />
         <span asp-validation-for="UserName" class="text-danger"></span>
+        @if (!string.IsNullOrEmpty(ViewData["UsernameError"] as string))
+        {
+            <span class="text-danger">@ViewData["UsernameError"]</span>
+        }
     </div>
     <div class="form-group">
         <label asp-for="Email"></label>
