--- a/src/Client/Shared/NavMenu.razor
+++ b/src/Client/Shared/NavMenu.razor
@@ -16,7 +16,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="catalog" Match="NavLinkMatch.All">
-                <span class="oi oi-map" aria-hidden="true"></span> Catalog of Books
+                <span class="oi oi-book" aria-hidden="true"></span> Catalog of Books
+            </NavLink>
+        </div
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="profile" Match="NavLinkMatch.All">
+                <span class="oi oi-monitor" aria-hidden="true"></span> User Profile
             </NavLink>
         </div>
     </nav>
