--- a/src/Client/Shared/NavMenu.razor
+++ b/src/Client/Shared/NavMenu.razor
@@ -19,11 +19,15 @@
                 <span class="oi oi-book" aria-hidden="true"></span> Catalog of Books
             </NavLink>
         </div
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="profile" Match="NavLinkMatch.All">
-                <span class="oi oi-monitor" aria-hidden="true"></span> User Profile
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="profile" Match="NavLinkMatch.All">
+                        <span class="oi oi-monitor" aria-hidden="true"></span> User Profile
+                    </NavLink>
+                </div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
 
